<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="155dp"
        android:layout_height="156dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="138dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_blackemail" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/border"
            android:textStyle="normal|italic"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_black_password"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textStyle="normal|italic"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="300dp"
            android:layout_marginStart="25dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:background="@drawable/border2"
            android:foregroundTint="#00F3F0F0"
            android:hint="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="153dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:onClick="forgotpassword"
            android:text="@string/forgotten_password"
            android:textColor="@color/red"
            app:layout_constraintEnd_toStartOf="@+id/txtsignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

        <TextView
            android:id="@+id/txtsignup"
            android:layout_width="183dp"
            android:layout_height="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="41dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="388dp"
            android:onClick="signup"
            android:text="@string/sign_up_for_i_m"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/forgotpassword"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>



</RelativeLayout>